# Rotor_Azimut_V1

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/8IoButtonBoard/: 8IoButtonBoard.c  8IoButtonBoardInterface.c  CMakeLists.txt
components/8IoButtonBoard/include/: 8IoButtonBoard.h  8IoButtonBoardInterface.h
components/I2c/: CMakeLists.txt  I2c.c  i2cInterface.c
components/I2c/include/: I2c.h  i2CInterface.h
components/Oled/: CMakeLists.txt  Oled.c  OledInterface.c
components/Oled/include/: Oled.h  OledInterface.h
components/blueLed/: CMakeLists.txt  blueLed.c  blueLedInterface.c
components/blueLed/include/: blueLed.h  blueLedInterface.h
components/blueLedInterface/: CMakeLists.txt  blueLedInterface.c
components/buffer/: CMakeLists.txt  buffer.c
components/buffer/include/: buffer.h
components/charUtils/: CMakeLists.txt  charUtils.c
components/charUtils/include/: charUtils.h
components/clock/: CMakeLists.txt  clock.c  clockInterface.c
components/clock/include/: clock.h  clockInterface.h
components/clockI2c/: CMakeLists.txt
components/interface/: CMakeLists.txt  interface.c
components/interface/include/: constants.h  interface.h
components/io_expander_GY511/: CMakeLists.txt  esp_magnetometer_accelerometer_gy511.c
components/io_expander_GY511/include/: esp_magnetometer_accelerometer_gy511.h
components/io_expander_PCF8574/: CMakeLists.txt  esp_io_expander_pcf8574.c
components/io_expander_PCF8574/include/: esp_io_expander_pcf8574.h
components/magnetometer/: CMakeLists.txt  gy511.c  gy511Interface.c
components/magnetometer/include/: esp_gy511.h  esp_gyro_accel.h  esp_raw_packet.h  gy511.h  gy511Interface.h
components/rtci2c/: CMakeLists.txt
components/rtci2c/include/rtci2c/: rtci2c.h
components/rtci2c/lib/: rtci2c.c  sys.h
components/sensor/: CMakeLists.txt  sensor.c  sensorInterface.c
components/sensor/include/: sensor.h  sensorInterface.h
components/sensori2c/: CMakeLists.txt
components/sensori2c/include/sensori2c/: sensori2c.h
components/sensori2c/lib/: LSM303DLHC.h  sensori2c.c  sensori2c_private.h
components/uart0/: CMakeLists.txt  uart0.c
components/uartCommand/: uartCommand.c
components/uartCommand/include/: uartCommand.h
components/uartDebug/: CMakeLists.txt  uartDebug.c
i2c_tools/: sdkconfig  sdkconfig.old
main/: Kconfig.projbuild  idf_component.yml  main.c
main/components/blueLed/: blueLed.c
