idf_component_register(SRCS "8IoButtonBoardInterface.c" "8IoButtonBoard.c"
                    INCLUDE_DIRS "include"
                    "../uartCommand/include"
                    "../charUtils/include"
                    "/home/f4deb/esp/v5.4/esp-idf/components/esp_driver_i2c/include"
                    "/home/f4deb/esp/v5.4/esp-idf/components/nvs_flash/include"
                    "/home/f4deb/esp/v5.4/esp-idf/components/esp_event/include"
                    "/home/f4deb/esp/v5.4/esp-idf/components/esp_partition/include"
                    "/home/f4deb/RotorV1A/managed_components/zorxx__rtci2c/include"
                    )
