idf_component_register(SRCS "8IoButtonBoardInterface.c" "8IoButtonBoard.c"
                    INCLUDE_DIRS "include"
                    "../uartCommand/include"
                    "../charUtils/include"
                    "../rtci2c/include"
                    "../../../esp/v5.4/esp-idf/components/esp_driver_i2c/include"
                    "../../../esp/v5.4/esp-idf/components/nvs_flash/include"
                    "../../../esp/v5.4/esp-idf/components/esp_event/include"
                    "../../../esp/v5.4/esp-idf/components/esp_partition/include"
                    )
