idf_component_register(SRCS "I2c.c"
                    INCLUDE_DIRS "include"
                    "/home/f4deb/esp/v5.4/esp-idf/components/esp_driver_i2c/include"
                    "/home/f4deb/esp/v5.4/esp-idf/components/log/include"
                    "/home/f4deb/RotorV1A/managed_components/espressif__esp_io_expander/include"
                    "/home/f4deb/RotorV1A/managed_components/espressif__esp_io_expander_ht8574/include"
                    )
