idf_component_register(SRCS "I2c.c" "i2cInterface.c"
                    INCLUDE_DIRS "include"
                    "../../../esp/v5.4/esp-idf/components/esp_driver_i2c/include"
                    "../../../esp/v5.4/esp-idf/components/log/include"
                    "../../../esp/v5.4/esp-idf/components/esp_event/include"
                    )
