idf_component_register(SRCS "Oled.c" "../I2c/I2c.c" "OledInterface.c"
                    INCLUDE_DIRS "include"
                    "../../components/I2c/include"
                    
                    "/home/f4deb/RotorV1A/managed_components/espressif__esp_lvgl_port/include"
                    "/home/f4deb/RotorV1A/managed_components/lvgl__lvgl"

                    "/home/f4deb/esp/v5.4/esp-idf/components/esp_driver_i2c/include"
                    "/home/f4deb/esp/v5.4/esp-idf/components/nvs_flash/include"
                    "/home/f4deb/esp/v5.4/esp-idf/components/log/include"
                    "/home/f4deb/esp/v5.4/esp-idf/components/esp_event/include"
                    "/home/f4deb/esp/v5.4/esp-idf/components/esp_partition/include"
                    "/home/f4deb/esp/v5.4/esp-idf/components/esp_driver_spi/include"
                    "/home/f4deb/esp/v5.4/esp-idf/components/esp_lcd/include"
                    "/home/f4deb/RotorV1A/managed_components/zorxx__rtci2c/include"
                    )