idf_component_register(SRCS "interface.c" 
                            "../charUtils/charUtils.c"
                            "../clock/clockInterface.c" 
                            "../blueLed/blueLedInterface.c" 
                            "../8IoButtonBoard/8IoButtonBoardInterface.c"
                            "../Oled/OledInterface.c"
INCLUDE_DIRS "include" 
            "../charUtils/include"
			"../blueLed/include/" 
            "../clock/include/" 
            "../8IoButtonBoard/include/" 
            "../Oled/include"
            "../../../esp/v5.4/esp-idf/components/esp_driver_i2c/include"
            "../../../esp/v5.4/esp-idf/components/nvs_flash/include"
            "../../../esp/v5.4/esp-idf/components/esp_event/include"
            "../../../esp/v5.4/esp-idf/components/esp_partition/include")