idf_component_register(SRCS "interface.c" 
                            "../charUtils/charUtils.c"
                            "../clock/clockInterface.c" 
                            "../blueLed/blueLedInterface.c" 
                            "../8IoButtonBoard/8IoButtonBoardInterface.c"
                            "../Oled/OledInterface.c"
                            "../I2c/i2cInterface.c"
                            "../sensor/sensor.c"
INCLUDE_DIRS "include" 
            "../charUtils/include"
			"../blueLed/include/" 
            "../clock/include/" 
            "../8IoButtonBoard/include/" 
            "../Oled/include"
            "../I2c/include"
            "../sensor/include"
            "$ENV{IDF_PATH}/components/esp_driver_i2c/include"
            "$ENV{IDF_PATH}/components/nvs_flash/include"
            "$ENV{IDF_PATH}/components/esp_event/include"
            "$ENV{IDF_PATH}/components/esp_partition/include")