idf_component_register(SRCS "sensorInterface.c" "sensor.c"
INCLUDE_DIRS "include" 
            "../uartCommand/include"
            "../charUtils/include"
            "../sensori2c/include"
            "$ENV{IDF_PATH}/components/esp_driver_i2c/include"
            "$ENV{IDF_PATH}/components/nvs_flash/include"
            "$ENV{IDF_PATH}/components/esp_event/include"
            "$ENV{IDF_PATH}/components/esp_partition/include"
            "$ENV{IDF_PATH}/components/esp_driver_gpio/include"
            )